# ConsoleKit

./: configure.ac
data/: 00-primary.seat  ConsoleKit.conf  Makefile.am
data/displays.d/: Headless.display.in  Local.display.in  LocalVNC.display.in  Makefile.am  RemoteMachine.display.in  Sunray.display.in
data/sessions.d/: Headless.session  Local.session  LocalVNC.session  Makefile.am  Remote.session
doc/dbus/: ck-terms.xml
libck-connector/: ck-connector.c
src/: Makefile.am  ck-display-template.c  ck-display-template.h  ck-log-event.c  ck-log-event.h  ck-manager.c  ck-manager.h  ck-marshal.list  ck-seat.c  ck-seat.h  ck-session-leader.c  ck-session.c  ck-session.h  org.freedesktop.ConsoleKit.Manager.xml  org.freedesktop.ConsoleKit.Seat.xml  org.freedesktop.ConsoleKit.Session.xml  strverscmp.h
tools/: Makefile.am  ck-seat-tool.c  list-sessions.c
